# options_trading_platform

./: .gitignore  CMakeLists.txt  README.md  build.sh  example_options_pricing.py  requirements.txt  setup.py  test_functionality.py  test_options_pricing.py
cpp/: CMakeLists.txt
cpp/optionslib/: bindings.cpp  options_pricing.cpp  options_pricing.hpp
python/: example.py  model_comparison.py
python/optionslib/: __init__.py  market_data.py  optimization.py  options_pricing.py  portfolio.py  risk_analytics.py  technical_analysis.py
python/tests/: test_portfolio.py  test_technical_analysis.py
src/: CMakeLists.txt
src/core/pricing/: binomial_pricer.cpp  binomial_pricer.hpp  monte_carlo_pricer.cpp  monte_carlo_pricer.hpp  pricing_engine.cpp  pricing_engine.hpp
src/core/risk/: portfolio.cpp  portfolio.hpp
src/python_bindings/: bindings.cpp
tests/: CMakeLists.txt  portfolio_test.cpp
